--- a/src/Module/Web/Page/@template/Index.twig
+++ b/src/Module/Web/Page/@template/Index.twig
@@ -1,5 +1,7 @@
 {% extends('@smartpage/smartpage.twig') %}
 
 {% block content %}
-	Hello Twig
+	{% for user in users %}
+		{{ user.name }}<br>
+	{% endfor %}
 {% endblock %}
