--- a/src/Module/Web/Page/@template/Index.twig
+++ b/src/Module/Web/Page/@template/Index.twig
@@ -1,7 +1,5 @@
 {% extends('@smartpage/smartpage.twig') %}
 
 {% block content %}
-	{% for user in users %}
-		{{ user.name }}<br>
-	{% endfor %}
+<div is="codex-layout"></div>
 {% endblock %}
