--- a/src/Module/Web/Page/@js/src/codex/layout-content/style.less
+++ b/src/Module/Web/Page/@js/src/codex/layout-content/style.less
@@ -14,19 +14,41 @@
 		grid-row-gap: 20px;
 		grid-auto-flow: dense;
 
-		.w-1x{ grid-column-end: span 1; }
-		.w-2x{ grid-column-end: span 2; }
-		.w-3x{ grid-column-end: span 3; }
-		.w-4x{ grid-column-end: span 4; }
-		.w-5x{ grid-column-end: span 5; }
-		.w-6x{ grid-column-end: span 6; }
 
-		.h-1x{ grid-row-end: span 1; }
-		.h-2x{ grid-row-end: span 2; }
-		.h-3x{ grid-row-end: span 3; }
-		.h-4x{ grid-row-end: span 4; }
-		.h-5x{ grid-row-end: span 5; }
-		.h-6x{ grid-row-end: span 6; }
+		.panel {
+			&:not(.no-frame) {
+				border: 1px solid #ddd;
+				background: white;
+				box-shadow: 0 16px 14px -17px rgba(0, 0, 0, 0.1);
+			}
+			overflow-y: scroll;
+			&.w-1x{ grid-column-end: span 1; }
+			&.w-2x{ grid-column-end: span 2; }
+			&.w-3x{ grid-column-end: span 3; }
+			&.w-4x{ grid-column-end: span 4; }
+			&.w-5x{ grid-column-end: span 5; }
+			&.w-6x{ grid-column-end: span 6; }
+
+			&.h-1x{ grid-row-end: span 1; }
+			&.h-2x{ grid-row-end: span 2; }
+			&.h-3x{ grid-row-end: span 3; }
+			&.h-4x{ grid-row-end: span 4; }
+			&.h-5x{ grid-row-end: span 5; }
+			&.h-6x{ grid-row-end: span 6; }
+
+			&.pull-left {margin-left:-16px;}
+			&.pull-right {margin-right:-16px;}
+			&.pull-up {margin-top:-21px;}
+			&.pull-down {margin-bottom:-21px;}
+			&.pull{margin: -21px -16px;}
+
+			&.close-left {margin-left:-10px;}
+			&.close-right {margin-right:-10px;}
+			&.close-up {margin-top:-15px;}
+			&.close-down {margin-bottom:-15px;}
+			&.close{margin: -16px -21px;}
+
+		}
 
 	}
 
@@ -49,15 +71,6 @@
 			font-size: 24px;
 			font-weight: 300;
 		}
-	}
-
-	.panel {
-		&:not(.invisible) {
-			border: 1px solid #ddd;
-			background: white;
-			box-shadow: 0 16px 14px -17px rgba(0, 0, 0, 0.1);
-		}
-		overflow-y: scroll;
 	}
 
 }
