--- a/src/Module/Web/Page/@js/src/eternity/form-frame/template.twig
+++ b/src/Module/Web/Page/@js/src/eternity/form-frame/template.twig
@@ -3,8 +3,8 @@
 </header>
 
 <div class="content-wrapper">
-	<div class="panel w-4x h-3x"></div>
-	<div class="panel w-2x h-3x"></div>
-	<div class="panel w-1x h-3x"></div>
-	<div class="panel w-5x h-3x"></div>
+	<div class="panel w-5x h-3x close-left close-down close-up"></div>
+	<div class="panel w-1x h-3x pull-left close-down close-right close-up"></div>
+	<div class="panel w-1x h-3x pull-right close-left close-down"></div>
+	<div class="panel w-5x h-3x close-right close-down"></div>
 </div>
