--- a/src/Module/Web/Page/@template/Index.twig
+++ b/src/Module/Web/Page/@template/Index.twig
@@ -1,5 +1,5 @@
 {% extends('@smartpage/smartpage.twig') %}
 
 {% block content %}
-<div is="codex-layout"></div>
+<div is="codex-layout" data-title="MIK-WIKI" data-icon="fas fa-chart-line" data-icon-bg="fas fa-circle"></div>
 {% endblock %}
