--- a/src/Module/Web/Page/@js/src/codex/layout-menu/style.less
+++ b/src/Module/Web/Page/@js/src/codex/layout-menu/style.less
@@ -1,38 +1,33 @@
 [is=codex-layout-menu] {
 	background-color: #293f54;
 	color: #eee;
+	position: relative;
 	header {
 		background-color:#15283a;
+		border-bottom: 1px solid #536371;
+		padding: 0 10px;
+		height: 60px;
+
 		.icon{
 			margin-top:12px;
 			margin-right: 10px;
 			font-size:16px;
 			float:left;
-			color:#58aeff;
-
-			.fa-inverse{
+			.fa-stack-2x{
+				color:#58aeff;
+				text-shadow: 2px 2px 2px rgba(0,0,0,.3);
+			}
+			.fa-stack-1x{
 				color:white;
 				text-shadow: 2px 2px 2px rgba(0,0,0,.3);
 			}
 		}
-		border-bottom: 1px solid #536371;
-		padding: 0 10px;
-		height: 60px;
 		h1 {
 			margin: 0;
-			padding: 18px 0 0 0;
-			font-weight: 600;
-			font-size: 16px;
+			padding: 22px 0 0 0;
+			font-size: 18px;
 			line-height: 13px;
-		}
-		div.logo {
-			font-size: 10px;
-			color:#c1d5e8;
-			i {
-				color: #ff7bbd;
-			}
-
-			font-weight: 200;
+			font-weight: 300;
 		}
 	}
 
@@ -63,5 +58,20 @@
 		}
 	}
 
+	div.codex-logo {
+		position: absolute;
+		bottom:0; width: 100%;
 
+		background-color:#15283a;
+		border-top: 1px solid #536371;
+		padding: 10px;
+
+		font-size: 10px;
+		color:#c1d5e8;
+		i {
+			color: #ff7bbd;
+		}
+
+		font-weight: 200;
+	}
 }
