--- a/src/Module/Web/Page/@js/src/codex/layout-menu/template.twig
+++ b/src/Module/Web/Page/@js/src/codex/layout-menu/template.twig
@@ -1,9 +1,9 @@
 <header>
 	<span class="icon fa-stack fa-2x">
 		<i class="fas fa-circle fa-stack-2x"></i>
-  		<i class="fas fa-chart-line fa-stack-1x fa-inverse"></i>
+  		<i class="fas fa-chart-line fa-stack-1x"></i>
 	</span>
-	<h1> PTE MIK Stats</h1>
-	<div class="logo"><i class="fas fa-infinity"></i>|Eternity Codex II</div>
+	<h1> MIK-WIKI</h1>
 </header>
 <ul></ul>
+<div class="codex-logo"><i class="fas fa-infinity"></i> | Eternity Codex II</div>
