--- a/src/Module/Admin/_old/Admin/@css/style.less
+++ b/src/Module/Admin/_old/Admin/@css/style.less
@@ -1,5 +1,5 @@
-@import url('/dist/admin/google-fonts.css');
-@import url("/css/fontawesome.css");
+@import url('/admin/css/google-fonts.css');
+@import url('/admin/css/fontawesome.css');
 
 * {
 	box-sizing: border-box;
