--- a/src/Module/Web/Page/@template/Index.twig
+++ b/src/Module/Web/Page/@template/Index.twig
@@ -1,6 +1,4 @@
 {% extends('@smartpage/smartpage.twig') %}
 {% block content %}
-	<div is="codex-layout">
-		{% include("@web/header.twig") %}
-	</div>
+	<div is="codex-layout">{% include("@web/header.twig") %}</div>
 {% endblock %}
