--- a/src/Module/Web/Page/@js/src/codex/layout-menu/style.less
+++ b/src/Module/Web/Page/@js/src/codex/layout-menu/style.less
@@ -2,25 +2,30 @@
 	background-color: #293f54;
 	color: #eee;
 	position: relative;
+
 	header {
-		background-color:#15283a;
+		background-color: #15283a;
 		border-bottom: 1px solid #536371;
 		padding: 0 10px;
 		height: 60px;
-		.icon{
-			margin-top:12px;
+
+		.icon {
+			margin-top: 12px;
 			margin-right: 10px;
-			font-size:16px;
-			float:left;
-			.fa-stack-2x{
-				color:#58aeff;
-				text-shadow: 2px 2px 2px rgba(0,0,0,.3);
+			font-size: 16px;
+			float: left;
+
+			.fa-stack-2x {
+				color: #58aeff;
+				text-shadow: 2px 2px 2px rgba(0, 0, 0, .3);
 			}
-			.fa-stack-1x{
-				color:white;
-				text-shadow: 2px 2px 2px rgba(0,0,0,.3);
+
+			.fa-stack-1x {
+				color: white;
+				text-shadow: 2px 2px 2px rgba(0, 0, 0, .3);
 			}
 		}
+
 		h1 {
 			margin: 0;
 			padding: 22px 0 0 0;
@@ -30,7 +35,8 @@
 		}
 	}
 
-	&>ul {
+	& > ul {
+		user-select: none;
 		list-style: none;
 		padding: 0;
 		margin: 0;
@@ -46,67 +52,77 @@
 			transition: all .3s;
 			cursor: pointer;
 			position: relative;
-			max-height: 40px;
 			overflow: hidden;
 
-			div{
+			div {
 				transition: all .3s;
-				padding-left:10px;
+				padding-left: 10px;
+
+				&:hover {
+					background-color: #34495d;
+					padding-left: 20px;
+				}
+
+				i {
+					line-height: inherit;
+					float: left;
+					width: 20px;
+				}
 			}
 
-			&:hover{
-				background-color: #34495d;
-			}
 
-			&:hover:not(.has-submenu){
-				div{padding-left: 20px;}
-			}
-
-			i {
-				line-height: inherit;
-				float: left;
-				width: 20px;
-			}
-
-			&.has-submenu:after{
-				content: "\f104";
-				position: absolute;
-				top:0;
-				right: 10px;
-				font-family: "Font Awesome 5 Pro";
-				transition: all .3s;
-			}
-
-			&.has-submenu.open{
-				max-height: initial;
-				&:after{
+			&.has-submenu {
+				&:after {
+					content: "\f104";
+					position: absolute;
+					top: 0;
+					right: 10px;
+					font-family: "Font Awesome 5 Pro";
+					transition: all .3s;
+					color: #618195;
+				}
+				&.open:after {
 					transform: rotate(-90deg);
 				}
-				ul{
-					display: block;
-					opacity: 1;
-					//margin: 0;
-					margin-left: 0px;
-				}
-			}
 
-			ul{
-				position: relative;
-				transition: all .3s;
-				//display: none;
-				opacity: 0;
-				list-style: none;
-				padding: 0;
-				margin: 0;
-				margin-left:-100%;
-				background-color: #15283a;
-				li {
-					font-size: 11px;
-					padding-left:20px;
-					line-height: 30px;
-					color: #fff;
-					border-top: 1px solid #394d5f;
-					border-bottom:0;
+				&:not(.open) {
+					ul {
+						opacity: 0;
+						margin-left: -15%;
+
+						li {
+							height: 0;
+							border-top-width: 0;
+						}
+					}
+				}
+
+				ul {
+					transition: all .3s;
+					position: relative;
+					opacity: 1;
+					list-style: none;
+					padding: 0;
+					margin: 0;
+					background-color: #15283a;
+
+					li {
+						transition: all .4s;
+						height: 30px;
+						font-size: 11px;
+						line-height: 30px;
+						color: #fff;
+						border-top-style: solid;
+						border-color: #394d5f;
+						border-top-width: 1px;
+						border-bottom-width: 0;
+						div{
+							padding-left:20px;
+							&:hover{
+								padding-left:26px;
+							}
+						}
+					}
 				}
 			}
 		}
@@ -114,14 +130,16 @@
 
 	div.codex-logo {
 		position: absolute;
-		bottom:0; width: 100%;
+		bottom: 0;
+		width: 100%;
 
-		background-color:#15283a;
+		background-color: #15283a;
 		border-top: 1px solid #536371;
 		padding: 10px;
 
 		font-size: 10px;
-		color:#c1d5e8;
+		color: #c1d5e8;
+
 		i {
 			color: #ff7bbd;
 		}
