--- a/Eternity2/WebApplication/Responder/smartpage_template/smartpage.twig
+++ b/Eternity2/WebApplication/Responder/smartpage_template/smartpage.twig
@@ -1,4 +1,4 @@
-{% filter spaceless %}
+{% apply spaceless %}
 <!doctype html>
 <html lang="{{ smartpage.language }}">
 <head>
@@ -39,4 +39,4 @@
 
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
