--- a/src/Module/Admin/Page/@template/Login.twig
+++ b/src/Module/Admin/Page/@template/Login.twig
@@ -1,4 +1,6 @@
 {% extends('@smartpage/smartpage.twig') %}
 {% block content %}
 	<px-login title="Eternity" icon="fas fa-gamepad fa-spin" login-placeholder="e-mail"></px-login>
+    <span style="font-family:Oswald;">Hello</span>
+    <i class="fas fa-user"></i>
 {% endblock %}
