--- a/src/Module/Admin/Page/@css/src/google-fonts.less
+++ b/src/Module/Admin/Page/@css/src/google-fonts.less
@@ -14,3 +14,35 @@
 	unicode-range: U+0-10FFFF;
 }
 
+@font-face {
+	font-family: 'Rajdhani';
+	font-style: normal;
+	font-weight: 400;
+	src: url(/fonts/Rajdhani-normal-400.woff) format('woff');
+	unicode-range: U+0-10FFFF;
+}
+
+@font-face {
+	font-family: 'Rajdhani';
+	font-style: normal;
+	font-weight: 500;
+	src: url(/fonts/Rajdhani-normal-500.woff) format('woff');
+	unicode-range: U+0-10FFFF;
+}
+
+@font-face {
+	font-family: 'Rajdhani';
+	font-style: normal;
+	font-weight: 600;
+	src: url(/fonts/Rajdhani-normal-600.woff) format('woff');
+	unicode-range: U+0-10FFFF;
+}
+
+@font-face {
+	font-family: 'Rajdhani';
+	font-style: normal;
+	font-weight: 700;
+	src: url(/fonts/Rajdhani-normal-700.woff) format('woff');
+	unicode-range: U+0-10FFFF;
+}
+
