--- a/src/Module/Admin/Page/@css/style.less
+++ b/src/Module/Admin/Page/@css/style.less
@@ -3,14 +3,11 @@
 
 * {
 	box-sizing: border-box;
-	font-family: Arial, sans-serif;
-	color: #333;
 	-webkit-font-smoothing: antialiased;
 	outline: none;
 }
 html, body {height: 100%;}
 body {
 	margin: 0;
-	background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 1%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%),
-	url('/img/admin/login-bg.jpg');
+	background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 1%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%),  linear-gradient(to bottom, #7db9e8 0%,#1e5799 100%);
 }
