--- a/src/Module/Admin/Page/@js/src/login/template.twig
+++ b/src/Module/Admin/Page/@js/src/login/template.twig
@@ -1,3 +1,12 @@
-<h1>Zengular Todo</h1>
-<input type="text" placeholder="Add new task">
-<div is="tasklist"></div>
+<section>
+	<header>Login</header>
+	<div>
+		<input required type="text" name="login" placeholder="login">
+		<input required type="password" name="password" placeholder="password">
+		<button>LOGIN</button>
+	</div>
+	<footer class="error">Login error!</footer>
+	<footer class="working"><i class="fa fa-cog fa-spin"></i> Working</footer>
+	<footer class="success">Access granted!</footer>
+</section>
+<div class="copyright">powered by 365Media - EternityII</div>
