--- a/src/Module/Admin/Page/@js/src/codex-login/style.less
+++ b/src/Module/Admin/Page/@js/src/codex-login/style.less
@@ -18,32 +18,40 @@
 			line-height: 30px;
 			padding: 0 10px;
 		}
-		header{
+
+		header {
 			background: #6fceee;
+			color: #335977;
 		}
-		footer{
+
+		footer {
 			transition: all .5s;
 			opacity: 0;
-			height:0;
+			height: 0;
 			text-align: center;
 			font-weight: 700;
-			&.visible{
-				opacity:1;
-				height:30px;
+
+			&.visible {
+				opacity: 1;
+				height: 30px;
 			}
-			&.error{
-				border-top:1px dotted brown;
-				color:brown;
+
+			&.error {
+				border-top: 1px dotted brown;
+				color: brown;
 			}
-			&.success{
-				border-top:1px dotted #61C800;
+
+			&.success {
+				border-top: 1px dotted #61C800;
 				color: #61C800;
 			}
-			&.working{
-				border-top:1px dotted #6fceee;
-				color:#6fceee;
+
+			&.working {
+				border-top: 1px dotted #6fceee;
+				color: #6fceee;
 			}
 		}
+
 		div {
 			padding: 10px;
 
