--- a/src/Module/Admin/Page/@js/src/codex-login/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-login/template.twig
@@ -1,7 +1,7 @@
 <section>
-	<header>Login</header>
+	<header><i class="{{ icon }}"></i> {{ title }}</header>
 	<div>
-		<input required type="text" name="login" placeholder="login">
+		<input required type="text" name="login" placeholder="{{ loginPlaceholder }}">
 		<input required type="password" name="password" placeholder="password">
 		<button>LOGIN</button>
 	</div>
