--- a/src/Module/Admin/Page/@template/Index.twig
+++ b/src/Module/Admin/Page/@template/Index.twig
@@ -1,4 +1,4 @@
 {% extends('@smartpage/smartpage.twig') %}
 {% block content %}
-	<px-admin admin-title="Eternity" icon="fas fas fa-gamepad" user="{{ user.name }}" avatar="{{ user.getAdminAvatar() }}"></px-admin>
+	<div is="codex-layout" data-title="Eternity Codex II" data-icon="fas fa-gamepad" data-user="{{ user }}" data-avatar="{{ avatar }}"></div>
 {% endblock %}
