--- a/src/Module/Admin/Page/@template/Login.twig
+++ b/src/Module/Admin/Page/@template/Login.twig
@@ -1,4 +1,4 @@
 {% extends('@smartpage/smartpage.twig') %}
 {% block content %}
-	<div is="codex-login" title="Eternity" icon="fas fa-gamepad fa-spin" login-placeholder="e-mail"></div>
+	<div is="codex-login" data-title="CodexII" data-icon="fas fa-gamepad fa-spin" data-login-placeholder="e-mail"></div>
 {% endblock %}
