--- a/src/Module/Admin/Page/@js/src/codex-frame/menu/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-frame/menu/template.twig
@@ -8,7 +8,7 @@
 	</i>
 	{% endif %}
 	<h1>{{ title }}</h1>
-	<span class="user"><i class="fas fa-times-circle"></i> {{ user }}</span>
+	<span class="user"><i class="fas fa-times-circle logout"></i> {{ user }}</span>
 </header>
 <ul></ul>
 <div class="codex-logo"><i class="fas fa-infinity"></i> | Eternity Codex II</div>
