--- a/src/Module/Admin/Page/@js/src/codex-form/form-frame/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-form/form-frame/template.twig
@@ -3,6 +3,6 @@
 </header>
 
 <div class="content-wrapper">
-	<div class="panel w-6x h-3x pull-left pull-right close-up"></div>
-	<div class="panel w-6x h-3x pull-up pull-left pull-right close-down"></div>
+	<div is="codex-list" class="panel w-6x h-3x pull-left pull-right close-up"></div>
+	<div is="codex-form" class="panel w-6x h-3x pull-up pull-left pull-right close-down"></div>
 </div>
