pager-slider added

--- a/src/Module/Admin/Page/@js/src/codex-admin/frame/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-admin/frame/template.twig
@@ -4,5 +4,5 @@
 
 <div class="content-wrapper">
 	<div is="codex-admin-list" class="panel w-6x h-3x pull-left pull-right close-up"></div>
-	<div is="codex-form" class="panel w-6x h-3x pull-up pull-left pull-right close-down"></div>
+	<div is="codex-form" class="panel w-6x h-3x close-up pull-left pull-right close-down"></div>
 </div>
