--- a/src/Module/Admin/Page/@js/src/codex-admin/list/style.less
+++ b/src/Module/Admin/Page/@js/src/codex-admin/list/style.less
@@ -5,9 +5,16 @@
 		border-collapse: collapse;
 		width: 100%;
 
-		thead {
+		tfoot th{
+			background-color: #3f5468;
+			text-align: left;
+			color: #ECF0F1;
 			position: sticky;
 			position: -webkit-sticky;
+			bottom: 0;
+			white-space: nowrap;
+			line-height: 28px;
+			height: 40px;
 
 		}
 
@@ -23,7 +30,7 @@
 		}
 
 
-		th {
+		thead th {
 			background-color: #3f5468;
 			height: 40px;
 			text-align: left;
@@ -52,10 +59,91 @@
 			}
 
 			tr:hover td {
-				background-color: #f0faf8;
-				color: #73879C;
-				padding: 12px 10px;
+				background-color: #58aeff;
+				color: #ffffff;
 			}
 		}
 	}
+
+
+	tfoot{
+		th>div{
+			display: grid;
+			grid-row-gap: 10px;
+			grid-template-columns: auto 1fr;
+		}
+	}
+
+	input[type=range].slider {
+		background: none;
+		-webkit-appearance: none;
+		margin:0;
+		display: block;
+	}
+	input[type=range].slider:focus {
+		outline: none;
+	}
+	input[type=range].slider::-webkit-slider-runnable-track {
+		width: 100%;
+		height: 25px;
+		cursor: pointer;
+		background: #516c86;
+		border-radius: 25px;
+		border: 4.4px solid rgba(0, 1, 0, 0);
+	}
+	input[type=range].slider::-webkit-slider-thumb {
+		border: 0px solid #58aeff;
+		height: 17px;
+		width: 17px;
+		border-radius: 20px;
+		background: #58aeff;
+		cursor: pointer;
+		-webkit-appearance: none;
+		margin-top: -0.4px;
+	}
+
+	input[type=range].slider::-moz-range-track {
+		width: 100%;
+		height: 25px;
+		cursor: pointer;
+		background: #516c86;
+		border-radius: 25px;
+		border: 4.4px solid rgba(0, 1, 0, 0);
+	}
+	input[type=range].slider::-moz-range-thumb {
+		border: 0px solid #58aeff;
+		height: 17px;
+		width: 17px;
+		border-radius: 20px;
+		background: #58aeff;
+		cursor: pointer;
+	}
+	input[type=range].slider::-ms-track {
+		width: 100%;
+		height: 25px;
+		cursor: pointer;
+		background: transparent;
+		border-color: transparent;
+		color: transparent;
+	}
+	input[type=range].slider::-ms-fill-lower {
+		background: #516c86;
+		border: 4.4px solid rgba(0, 1, 0, 0);
+		border-radius: 50px;
+	}
+	input[type=range].slider::-ms-fill-upper {
+		background: #516c86;
+		border: 4.4px solid rgba(0, 1, 0, 0);
+		border-radius: 50px;
+	}
+	input[type=range].slider::-ms-thumb {
+		border: 0px solid #58aeff;
+		width: 17px;
+		border-radius: 20px;
+		background: #58aeff;
+		cursor: pointer;
+		height: 17px;
+	}
+
 }
+
