--- a/src/Module/Admin/Page/@js/src/codex-admin/frame/style.less
+++ b/src/Module/Admin/Page/@js/src/codex-admin/frame/style.less
@@ -1,3 +1,31 @@
 [is=codex-admin-frame] {
+	header.page-header {
+		h2 {
+			padding     : 0;
+			margin      : 0;
+			color       : #73879C;
+			font-size   : 24px;
+			font-weight : 300;
 
+			i[data-placeholder=icon] {
+				line-height      : 60px;
+				width            : 60px;
+				text-align       : center;
+				float            : left;
+				margin-right     : 16px;
+				background-color : #73879C;
+				color            : #e6e8ea;
+
+			}
+
+			span[data-placeholder=title] {
+				line-height : 33px;
+				padding-top : 5px;
+				display     : block; }
+
+			div.paging-info {
+				font-size : 11px;
+			}
+		}
+	}
 }
