--- a/src/Module/Admin/Page/@js/src/codex-admin/frame/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-admin/frame/template.twig
@@ -1,5 +1,13 @@
 <header class="page-header">
-	<h1><i data-placeholder="icon"></i> <span data-placeholder="title"></span></h1>
+	<h2>
+		<i data-placeholder="icon"></i>
+		<span data-placeholder="title"></span>
+		<div class="paging-info">
+			<i class="fas fa-layer-group"></i>
+			<span data-for="current"></span> /
+			<span data-for="count"></span>
+		</div>
+	</h2>
 </header>
 
 <div class="content-wrapper">
