--- a/src/Module/Admin/Page/@js/src/codex-admin/list/style.less
+++ b/src/Module/Admin/Page/@js/src/codex-admin/list/style.less
@@ -91,21 +91,21 @@
 
 	tfoot {
 		th > div {
-			display               : grid;
-			grid-column-gap       : 10px;
-			grid-template-columns : auto 1fr;
+			//display               : grid;
+			//grid-column-gap       : 10px;
+			//grid-template-columns : auto 1fr;
 		}
 	}
 
-	div.paging-info {
-		height    : 24px;
-		font-size : 11px;
-		min-width : 120px;
-
-		[data-for=count] {
-			color : #86b0d8;
-		}
-	}
+	//div.paging-info {
+	//	height    : 24px;
+	//	font-size : 11px;
+	//	min-width : 120px;
+	//
+	//	[data-for=count] {
+	//		color : #86b0d8;
+	//	}
+	//}
 
 	div.slider {
 		width         : 100%;
@@ -114,6 +114,7 @@
 		height        : 24px;
 		border        : 4px solid rgba(0, 1, 0, 0);
 		margin        : 2px 0;
+		float:left;
 
 		i {
 			font-size : 16px;
