--- a/src/Module/Admin/Page/@js/src/codex-admin/list/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-admin/list/template.twig
@@ -4,7 +4,8 @@
 		{% set cols=0 %}
 		{% for column in fields %}
 			{% if column.visible %}
-				<th data-field="{{ column.name }}" class="{% if column.sortable %}sortable{% endif %}">{{ column.label }}</th>
+				<th data-field="{{ column.name }}"
+					 class="{% if column.sortable %}sortable{% endif %}">{{ column.label }}</th>
 				{% set cols= cols+1 %}
 			{% endif %}
 		{% endfor %}
@@ -14,17 +15,10 @@
 	<tfoot>
 	<tr>
 		<th colspan="{{ cols }}">
-			<div>
-				<div class="paging-info">
-					<i class="fas fa-layer-group"></i>
-					<span data-for="current"></span> /
-					<span data-for="count"></span>
-				</div>
-				<div class="slider">
-					<i class="left fas fa-arrow-alt-circle-left"></i>
-					<input type="range" min="1" max="1" value="1">
-					<i class="right fas fa-arrow-alt-circle-right"></i>
-				</div>
+			<div class="slider">
+				<i data-for="step-page-left" class="left fas fa-arrow-alt-circle-left"></i>
+				<input data-for="pager" type="range" min="1" max="1" value="1">
+				<i data-for="step-page-right" class="right fas fa-arrow-alt-circle-right"></i>
 			</div>
 		</th>
 	</tr>
