--- a/src/Module/Admin/Page/@js/src/codex-admin/frame/style.less
+++ b/src/Module/Admin/Page/@js/src/codex-admin/frame/style.less
@@ -7,7 +7,7 @@
 			font-size   : 24px;
 			font-weight : 300;
 
-			i[data-placeholder=icon] {
+			i[\(header-icon\)] {
 				line-height      : 60px;
 				width            : 60px;
 				text-align       : center;
@@ -18,10 +18,11 @@
 
 			}
 
-			span[data-placeholder=title] {
+			span[\(header-title\)] {
 				line-height : 33px;
 				padding-top : 5px;
-				display     : block; }
+				display     : block;
+			}
 
 			div.paging-info {
 				font-size : 11px;
