--- a/src/Module/Admin/Page/@js/src/codex-admin/list/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-admin/list/template.twig
@@ -1,24 +1,23 @@
-<table class="browse">
+<table>
 	<thead>
 	<tr>
 		{% set cols=0 %}
 		{% for column in fields %}
 			{% if column.visible %}
-				<th data-field="{{ column.name }}"
-					 class="{% if column.sortable %}sortable{% endif %}">{{ column.label }}</th>
+				<th data-field="{{ column.name }}" {% if column.sortable %}(sortable){% endif %}>{{ column.label }}</th>
 				{% set cols= cols+1 %}
 			{% endif %}
 		{% endfor %}
 	</tr>
 	</thead>
-	<tbody></tbody>
+	<tbody (list)></tbody>
 	<tfoot>
 	<tr>
 		<th colspan="{{ cols }}">
 			<div class="slider">
-				<i data-for="step-page-left" class="left fas fa-arrow-alt-circle-left"></i>
-				<input data-for="pager" type="range" min="1" max="1" value="1">
-				<i data-for="step-page-right" class="right fas fa-arrow-alt-circle-right"></i>
+				<i (step-page-left) class="left fas fa-arrow-alt-circle-left"></i>
+				<input (pager-slider) type="range" min="1" max="1" value="1">
+				<i (step-page-right) class="right fas fa-arrow-alt-circle-right"></i>
 			</div>
 		</th>
 	</tr>
