--- a/src/Module/Admin/Page/@js/src/codex-admin/tab-manager/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex-admin/tab-manager/template.twig
@@ -1,13 +1,2 @@
-<div (tabs)>
-	<div data-selected is="codex-admin-tab" data-icon="fas fa-user" data-label="Tab1"></div>
-	<div is="codex-admin-tab" data-icon="fas fa-user" data-label="Tab1"></div>
-	<div is="codex-admin-tab" data-icon="fas fa-user" data-label="Tab1"></div>
-	<div is="codex-admin-tab" data-icon="fas fa-user" data-label="Tab1"></div>
-	<!--div class="selected"><i class="icon fas fa-user"></i><span>Long name of tab</span><i class="close fal fa-times"></i></div>
-	<div><i class="icon fas fa-user"></i><span>Tab1</span><i class="close fal fa-times"></i></div>
-	<div><i class="icon fas fa-user"></i><span>Tab1</span><i class="close fal fa-times"></i></div>
-	<div><i class="icon fas fa-user"></i><span>Tab1</span><i class="close fal fa-times"></i></div-->
-</div>
-<div (forms)>
-forms
-</div>
+<div (tabs)></div>
+<div (forms)></div>
