--- a/src/Module/Admin/Page/@js/src/codex/admin/frame/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex/admin/frame/template.twig
@@ -11,6 +11,6 @@
 </header>
 
 <div class="content-wrapper">
-	<div is="codex-admin-list" class="panel w-6x h-3x pull-left pull-right close-up"></div>
-	<div is="codex-admin-tab-manager" class="panel w-6x h-3x close-up pull-left pull-right close-down"></div>
+	<div is="codex-admin-list" class="panel w-6x h-3x zero-left zero-right pull-up no-frame"></div>
+	<div is="codex-admin-tab-manager" class="panel w-6x h-3x pull-up zero-left zero-right pull-down no-frame"></div>
 </div>
