--- a/src/Module/Admin/Page/@js/src/codex/admin/tab-manager/style.less
+++ b/src/Module/Admin/Page/@js/src/codex/admin/tab-manager/style.less
@@ -1,15 +1,15 @@
 [is=codex-admin-tab-manager] {
 
 	display            : grid;
-	grid-template-rows : 23px auto;
+	grid-template-rows : 28px auto;
 	overflow           : hidden;
 
 	[\(tabs\)] {
-		background-color : #ddd;
+		background-color : #15283a;
 		overflow         : hidden;
-		height           : 23px;
 		position         : sticky;
 		top              : 0;
+		padding          : 5px 5px 0;
 	}
 
 	[\(forms\)] {
