--- a/src/Module/Admin/Page/@js/src/codex/frame/content/style.less
+++ b/src/Module/Admin/Page/@js/src/codex/frame/content/style.less
@@ -35,6 +35,9 @@
 			&.h-5x{ grid-row-end: span 5; }
 			&.h-6x{ grid-row-end: span 6; }
 
+			&.zero-left {margin-left:-20px;}
+			&.zero-right {margin-right:-20px;}
+
 			&.pull-left {margin-left:-16px;}
 			&.pull-right {margin-right:-16px;}
 			&.pull-up {margin-top:-21px;}
