--- a/src/Module/Admin/Page/@css/src/google-fonts.less
+++ b/src/Module/Admin/Page/@css/src/google-fonts.less
@@ -1,48 +1,42 @@
 @font-face {
-	font-family: 'Oswald';
-	font-style: normal;
-	font-weight: 200;
-	src: url(/fonts/Oswald-normal-200.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 200;
+  src: url('/fonts/Oswald-200.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Oswald';
-	font-style: normal;
-	font-weight: 400;
-	src: url(/fonts/Oswald-normal-400.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/Oswald-400.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Rajdhani';
-	font-style: normal;
-	font-weight: 400;
-	src: url(/fonts/Rajdhani-normal-400.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Rajdhani';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Rajdhani Light'), local('Rajdhani-Light'), url('/fonts/Rajdhani-300.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Rajdhani';
-	font-style: normal;
-	font-weight: 500;
-	src: url(/fonts/Rajdhani-normal-500.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Rajdhani';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Rajdhani Regular'), local('Rajdhani-Regular'), url('/fonts/Rajdhani-400.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Rajdhani';
-	font-style: normal;
-	font-weight: 600;
-	src: url(/fonts/Rajdhani-normal-600.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Rajdhani';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Rajdhani Medium'), local('Rajdhani-Medium'), url('/fonts/Rajdhani-500.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Rajdhani';
-	font-style: normal;
-	font-weight: 700;
-	src: url(/fonts/Rajdhani-normal-700.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Rajdhani';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Rajdhani SemiBold'), local('Rajdhani-SemiBold'), url('/fonts/Rajdhani-600.woff') format('woff');
 }
-
+@font-face {
+  font-family: 'Rajdhani';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Rajdhani Bold'), local('Rajdhani-Bold'), url('/fonts/Rajdhani-700.woff') format('woff');
+}
