--- a/src/Module/Admin/Page/@js/src/codex/admin/form/template.twig
+++ b/src/Module/Admin/Page/@js/src/codex/admin/form/template.twig
@@ -1,69 +1,15 @@
 <div class="header">Header</div>
 <div class="sections">
-	<div class="section">
-		ICH BIN FORM1<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM11<br>
-	</div>
-	<div class="section">
-		ICH BIN FORM1<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM<br>
-		ICH BIN FORM11<br>
-	</div>
+
+	{% for section in sections %}
+		<section>
+			{% for input in section.inputs %}
+				<div class="field">
+					<label>{{ input.label }}</label>
+					<div is="codex-input-{{ input.type }}" data-name="{{ input.field }}" (input)></div>
+				</div>
+			{% endfor %}
+		</section>
+	{% endfor %}
+
 </div>
