--- a/src/Module/Web/Page/@css/src/google-fonts.less
+++ b/src/Module/Web/Page/@css/src/google-fonts.less
@@ -1,16 +1,12 @@
 @font-face {
-	font-family: 'Oswald';
-	font-style: normal;
-	font-weight: 500;
-	src: url(/fonts/Oswald-normal-500.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/fonts/Oswald-500.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 500;
-	src: url(/fonts/Roboto-normal-500.woff) format('woff');
-	unicode-range: U+0-10FFFF;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Roboto Medium'), local('Roboto-Medium'), url('/fonts/Roboto-500.woff') format('woff');
 }
-
