--- a/src/Module/Admin/Page/@js/src/codex/admin/form/style.less
+++ b/src/Module/Admin/Page/@js/src/codex/admin/form/style.less
@@ -20,13 +20,35 @@
 		flex-wrap        : wrap;
 		background-color : #eee;padding : 5px 5px 10px 5px;
 
-		div.section {
+		section {
 			background-color : white;
 			border           : 1px solid #ddd;
 			flex-basis       : 0;
 			flex-grow        : 1;
 			min-width        : 400px;
 			margin           : 5px 5px 0 5px;
+
+			div.field{
+				display:flex;
+				border-bottom: 1px solid #ddd;
+				&:last-child{
+					border-bottom:0;
+				}
+				>label{
+					padding: 0 10px;
+					border-right: 1px solid #ddd;
+					width: 150px;
+					display: inline-block;
+					font-size: 11px;
+					line-height: 22px;
+					background-color: #f9f9f9;
+
+				}
+				>div{
+					display: inline-block;
+					width: ~"calc( 100% - 150px )";
+				}
+			}
 		}
 	}
 
