--- a/src/Mission/Admin/Page/@js/src/codex/admin/form/style.less
+++ b/src/Mission/Admin/Page/@js/src/codex/admin/form/style.less
@@ -2,7 +2,7 @@
 	&:not(.visible) {
 		display : none;
 	}
-
+	position:relative;
 	height     : 100%;
 	overflow-y : scroll;
 
@@ -135,5 +135,22 @@
 		}
 	}
 
+	div.overlay{
+		&.visible{
+			display: block;
+		}
+		display:none;
+		position: absolute;
+		top:0;left:0;right: 0;bottom:0;
+		background-color: rgba(0,0,0,.6);
+		color:white;
+		text-align: center;
+
+		i{
+			top: ~"calc(50% - 40px)";
+			position: relative;
+			font-size:40px;
+		}
+	}
 }
 
