--- a/src/Mission/Admin/Page/@js/src/codex/admin/form/template.twig
+++ b/src/Mission/Admin/Page/@js/src/codex/admin/form/template.twig
@@ -18,5 +18,8 @@
 			{% endfor %}
 		</section>
 	{% endfor %}
+</div>
 
+<div class="overlay" (overlay)>
+	<i class="fas fa-spinner fa-spin"></i>
 </div>
