--- a/src/Mission/Admin/Page/@js/src/codex/admin/frame/template.twig
+++ b/src/Mission/Admin/Page/@js/src/codex/admin/frame/template.twig
@@ -1,4 +1,6 @@
 <header class="page-header">
+	<span class="buttons" (buttons)=""></span>
+
 	<h2>
 		<i (header-icon)></i>
 		<span (header-title)></span>
